2020-09-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify2_ps_type): Do not set
	COMPILED=1.
	* libpoke/pkl-anal.c (pkl_analf_ps_type): New handler.
	(pkl_phase_analf): Install handler.
	* testsuite/poke.pkl/ass-diag-9.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2020-09-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (aconc): Fix the type of the resulting
	array.
	* testsuite/poke.pkl/add-arrays-4.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2020-09-01  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* libpoke/libpoke.h (pk_val_equal_p): Prototype.
	* libpoke/pk-val.c (pk_val_equal_p): Define.
	* libpoke/pvm.h (pvm_val_equal_p): Prototype.
	* libpoke/pvm-val.c (pvm_val_equal_p): Define.
	* testsuite/poke.libpoke/values.c (test_pk_val_equal_p): New function.
	(test_pk_equal_file): Likewise.
	(copy_line_to_expression): Likewise.
	(compile_poke_expressions): Likewise.
	(compile_initial_poke_code): Likewise.
	* testsuite/poke.libpoke/pk_equal_int.test: New test.
	* testsuite/poke.libpoke/pk_equal_uint.test: New test.
	* testsuite/poke.libpoke/pk_equal_str.test: New test.
	* testsuite/poke.libpoke/pk_equal_off.test: New test.
	* testsuite/poke.libpoke/pk_equal_sct.test: New test.
	* testsuite/poke.libpoke/pk_equal_arr.test: New test.
	* testsuite/poke.libpoke/pk_nequal_int.test: New test.
	* testsuite/poke.libpoke/pk_nequal_uint.test: New test.
	* testsuite/poke.libpoke/pk_nequal_str.test: New test.
	* testsuite/poke.libpoke/pk_nequal_off.test: New test.
	* testsuite/poke.libpoke/pk_nequal_sct.test: New test.
	* testsuite/poke.libpoke/pk_nequal_arr.test: New test.
	* testsuite/poke.libpoke/Makefile.am: Added PKGDATADIR.
	* testsuite/Makefile.am (EXTRA_DIST): Updated with new tests.
	* bootstrap.conf (gnulib_modules): Added new modules.

2020-09-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type): Update comment.