@@ -1,3 +1,8 @@
+2020-09-03  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.c (pkl_gen_ps_func): New handler.
+	(pkl_phase_gen): Install handler.
+
 2020-09-02  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-typify.c (pkl_typify2_ps_type): Do not set
